<resources>
    <string name="app_name">HiParent</string>
    <string name="no_internet">Tidak ada internet</string>

    <!-- Login Activity   -->
    <string name="login_illustration">Login_illustration</string>
    <string name="welcome_back">Selamat Datang!</string>
    <string name="welcome_description">Mari berbagi cerita sebagai orang tua</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="to_register">Belum punya akun?</string>
    <string name="login">Login</string>
    <string name="email_address">Alamat email</string>
    <string name="input_password">Masukan password</string>
    <string name="login_success_message">Login berhasil</string>
    <string name="login_failed_message">Login tidak berhasil</string>
    <string name="forgot_password">Lupa password?</string>
    <string name="klik_disini">Klik disini</string>

    <!-- Register Activity   -->
    <string name="iv_back_to_login">iv_back_to_login</string>
    <string name="advertise_text">Buat Akun Baru</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="Input_fullname">Masukan nama lengkap</string>
    <string name="confirm_password">Konfirmasi Password</string>
    <string name="retype_password">Masukan ulang password</string>
    <string name="to_login">Sudah punya akun?</string>
    <string name="create_account">Buat Akun</string>
    <string name="email_is_empty_error">Email tidak boleh kosong</string>
    <string name="password_is_empty_error">Password tidak boleh kosong</string>
    <string name="confirm_is_empty_error">Konfirmasi password tidak boleh kosong</string>
    <string name="confirm_not_equal_password_error">Konfirmasi password tidak sesuai</string>
    <string name="password_short_than_8_error">Password harus lebih panjang dari 8 karakter</string>
    <string name="create_success_message">Akun berhasil dibuat</string>
    <string name="create_failed_message">Akun tidak berhasil dibuat :(</string>
    <string name="fullname_empty_error">Name lengkap tidak boleh kosong</string>
    <string name="email_not_valid_message">Email tidak valid</string>
    <string name="max_fullname_char">Maksimal 30 kata</string>

    <!-- Home   -->
    <!-- Profile Fragment   -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="foto_profile">foto_profile</string>
    <string name="save_profile">Save Profile</string>
    <string name="permission_failed">Tidak mendapatkan permission.</string>
    <string name="update_success">Profile terupdate</string>
    <string name="update_failed">Profile gagal terupdate</string>
    <string name="change_fullname">change_fullname</string>
    <string name="update_confirmation">Apakah anda yakin untuk menyimpan perubahan?</string>
    <string name="change_photo_message">Butuh waktu yang lebih supaya foto profile dapat berubah</string>

    <!-- Setting Fragment   -->
    <string name="language">Bahasa (Indonesia, Inggris(USA))</string>
    <string name="logout">Keluar</string>
    <string name="alert">Pemberitahuan</string>
    <string name="confirmation">Apakah anda yakin ingin keluar?</string>
    <string name="no">Tidak</string>
    <string name="yes">Ya</string>
    <string name="dark_theme">Mode gelap</string>

    <!-- Home Fragment   -->
    <string name="halo">Halo</string>
    <string name="desc_home">Bagaimana kabar kamu hari ini?</string>
    <string name="banner">banner</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="diskusi">Diskusi</string>
    <string name="discus_advertise">Ayo bergabung!</string>
    <string name="join">Join</string>
    <string name="tips_parenting">Tips Parenting</string>
    <string name="read_now">Baca sekarang</string>
    <string name="age_children">Usia 0 – 5 Tahun</string>
    <string name="age_children_kid">Usia 6 – 12 Tahun</string>
    <string name="age_children_teen">Usia 13 – 17 Tahun</string>
    <string name="illustration">illustrasi</string>
    <string name="teen">Teen</string>
    <string name="kid">Kid</string>
    <string name="children">Children</string>

    <!--  Forum Activity  -->
    <string name="tab_text_1">Semua</string>
    <string name="tab_text_2">Postingan Saya</string>
    <string name="create_new_discuss">Buat diskusi baru</string>
    <string name="result_failed">Kamu belum membuat postingan</string>
    <string name="result_empty">Belum ada postingan</string>
    <string name="no_post">Tidak ada postingan</string>
    <string name="edit">Edit</string>

    <!--  Add New Disucss Activity -->
    <string name="title">Judul</string>
    <string name="input_title">Masukan judul</string>
    <string name="input_desc">Masukan deskripsi</string>
    <string name="max_word_t">Maksimal 200 kata</string>
    <string name="desc">Deskripsi</string>
    <string name="max_word">Maksimal 1000 kata</string>
    <string name="upload">Unggah</string>
    <string name="title_empty_message">Judul tidak boleh kosong</string>
    <string name="desc_empty_message">Deskripsi tidak boleh kosong</string>
    <string name="upload_success">Diskusi berhasil diunggah</string>
    <string name="upload_failed">Diskusi gagal diunggah</string>
    <string name="by">Dibuat oleh</string>
    <string name="add_discuss">Tambah Diskusi</string>

    <!-- OnBoarding Activity   -->
    <string name="welcome_boarding_1">Selamat Datang Parent</string>
    <string name="welcome_boarding_2">Tips-Tips Yang beragam</string>
    <string name="welcome_boarding_3">Fitur Chat</string>
    <string name="welcome_desc_boarding_1">Yuk mulai jelajahi dunia Parenting yang lebih baik</string>
    <string name="welcome_desc_boarding_2">Beragam tips-tips bermanfaat</string>
    <string name="welcome_desc_boarding_3">Berdiskusi dengan sesama Parent</string>
    <string name="get_started">Ayo Mulai</string>
    <string name="next">Selanjutnya</string>

    <!-- Edit Activity   -->
    <string name="edit_discuss">Edit Diskusi</string>
    <string name="update">Ubah</string>
    <string name="delete">Hapus</string>
    <string name="update_confirm">Apakah anda yaking ingin merubah postingan?</string>
    <string name="delete_confirm">Apakah anda yakin ingin menghapus postingan?</string>
    <string name="update_success_discuss">Diskusi terupdate</string>

    <!-- Detail Activity   -->
    <string name="delete_success">Postingan berhasil dihapus</string>
    <string name="input_message">Tuliskan komentar</string>
    <string name="message">Komentar</string>
    <string name="comment_isempty">Komentar tidak boleh kosong</string>
    <string name="send_failed">Pesan gagal terikirm</string>
    <string name="send_success">Pesan terikirm</string>
    <string name="no_materi">Tidak ada materi</string>
    <string name="no_comment">Belum ada komentar</string>

    <!-- Reset Password Activity   -->
    <string name="reset_password">Reset Password</string>
    <string name="masukan_alamat_email">Masukan Alamat Email</string>
    <string name="reset">Reset</string>
    <string name="success_reset">Periksa email untuk mengganti password</string>
    <string name="failed_reset">Mengganti password tidak bisa dilakukan</string>

    <!-- Detail Comment Activity   -->
    <string name="confirm_delete_comment">Apakah anda ingin menghapus komentar?</string>
    <string name="delete_comment_message_success">Komentar berhasil dihapus</string>
    <string name="update_text_succes">Komentar berhasil diperbarui</string>

    <!-- Fragment Alarm  -->
    <string name="schedule">Jadwal Kegiatan</string>
    <string name="schedule_desc">Yuk jadwalin kegiatan sikecil</string>
    <string name="add_new_schedule">Tambah jadwal kegiatan</string>
    <string name="day">Hari/Tanggal</string>
    <string name="date">Waktu</string>
    <string name="create_alarm">Buat jadwal kegiatan</string>
    <string name="time_fake">HH:mm</string>
    <string name="date_fake">yyyy-MM-dd</string>
    <string name="date_error">Hari/Tanggal belum di set</string>
    <string name="time_error">Waktu belum di set</string>
    <string name="add_alarm_fail">Kegiatan gagal ditambahkan</string>
    <string name="add_alarm_success">Kegiatan berhasil ditambahkan</string>
    <string name="no_schedule">Belum ada jadwal</string>
    <string name="max_desc_alarm">Maksimal 500 kata</string>
    <string name="update_alarm_confirm">Apakah anda yaking ingin merubah jadwal?</string>
    <string name="delete_alarm_confirm">Apakah anda yakin ingin menghapus jadwal?</string>
    <string name="alarm_update_success">Jadwal diperbarui</string>
    <string name="delete_alarm_message">Apakah anda yakin ingin menghapus jadwal?</string>
    <string name="delete_message">Jadwal terhapus</string>
    <string name="add_schedule_title">Tambah Jadwal</string>
    <string name="edit_schedule">Edit Jadwal</string>


</resources>